# MarketPilot

./: AGENTS.md  README.md  compose.yaml
apps/api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: README  env.py
apps/api/migrations/versions/: 20260622_01_create_users.py  20260622_02_create_portfolio_ledger.py  20260622_03_create_orders.py  20260626_04_create_order_executions.py  20260701_05_add_execution_fx_snapshot.py
apps/api/src/marketpilot_api/: __init__.py  main.py
apps/api/src/marketpilot_api/core/: config.py  user_api_auth.py
apps/api/src/marketpilot_api/db/: __init__.py  base.py  session.py
apps/api/src/marketpilot_api/models/: __init__.py  cash_transaction.py  order.py  order_execution.py  portfolio.py  user.py
apps/api/src/marketpilot_api/repositories/: __init__.py  cash_ledger.py  fx_rates.py  orders.py  portfolios.py  positions.py  price_quotes.py  users.py
apps/api/src/marketpilot_api/routers/: internal_auth.py  market_data.py  orders.py  portfolios.py  system.py
apps/api/src/marketpilot_api/schemas/: __init__.py  auth.py  market_data.py  orders.py  portfolios.py  readiness.py
apps/api/tests/: test_cash_transaction_model.py  test_config.py  test_health.py  test_internal_auth.py  test_market_data_api.py  test_order_execution_model.py  test_order_model.py  test_orders_api.py  test_orders_repository.py  test_portfolio_model.py  test_portfolios_api.py  test_portfolios_repository.py  test_readiness.py  test_user_api_auth.py  test_user_model.py
docs/: architecture.md  authentication.md  cost-plan.md  (+6 more)
(+147 files in other folders)
