[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marketpilot-api"
version = "0.1.0"
description = "FastAPI backend for MarketPilot"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/marketpilot_api"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
